# OxiDoor

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  README_CN.md
.github/workflows/: rust_ci.yml
oxidoor-core/: Cargo.toml
oxidoor-core/src/: config.rs  database.rs  error.rs  lib.rs
oxidoor-embedded/: Cargo.toml  docker-compose.yaml
oxidoor-embedded-server/: Cargo.toml
oxidoor-embedded-server/src/: lib.rs
oxidoor-embedded/src/: main.rs
oxidoor-server/: Cargo.toml
oxidoor-web-server/: Cargo.toml
oxidoor-web-server/src/: main.rs
src/: main.rs  task.rs
