[workspace.package]
version = "0.1.0"
description = "OXIDOOR is a smart door lock system that uses the ESP32-S3 chip."
authors = ["AprilNEA <github@sku.moe>"]
license = "Apache-2.0"
repository = "https://github.com/aprilnea/oxidoor"

[workspace]
members = ["oxidoor-embedded", "oxidoor-server"]
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"