[package]
name = "oxidoor-core"
edition = "2024"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
sqlite = ["sea-orm/sqlx-sqlite"]
postgresql = ["sea-orm/sqlx-postgres", "sea-orm/runtime-tokio-rustls"]

[dependencies]
# Asynchronous runtime
tokio = { workspace = true }
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
# Data Structure
clap = { version = "4.5", features = ["derive", "env"] }
config = "0.15"
once_cell = { workspace = true }
# Error Handling
anyhow = { workspace = true }
thiserror = { workspace = true }
# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Database
sea-orm = { version = "1.1.14", features = [
  "macros",
  "with-chrono",
  "with-json",
] }